[package]
name = "hyper_evm_replay"
version = "0.1.0"
edition = "2024"

[dependencies]
rmp-serde = "1.3.0"
serde = "1.0.219"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.0", default-features = false }
revm = { version = "19.6.0", features = ["optional_eip3607"] }
alloy-primitives = "0.8.22"
alloy-consensus = "0.12.5"
anyhow = "1.0.97"
