[package]
name = "hyper_evm_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.5", default-features = false }
revm = { version = "=19.2.0", features = ["std", "serde-json", "optional_eip3607"]}
alloy = { version = "0.9.2", features = ["eips", "consensus", "rpc-types", "network", "genesis"] }
anyhow = "1.0"
lz4_flex = "0.11"
rayon = { version = "1.8" }
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
serde_json = { version = "1.0", features = ["raw_value"] }
blake3 = "1.7.0"
itertools = "0.14.0"